Add more RAM per server